--- a/futclebs/package.json
+++ b/futclebs/package.json
@@ -9,9 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.91.0",
+    "antd": "^6.3.0",
+    "axios": "^1.13.5",
+    "lucide-react": "^0.575.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@supabase/supabase-js": "^2.91.0"
+    "react-easy-crop": "^5.5.6",
+    "react-router-dom": "^6.30.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
